# projetcpp-2a33-smart-hotel

./: Arduino.cpp  Arduino.h  CMakeLists.txt  Employe.cpp  Employe.h  arduino.cpp  arduino.h  arduinoservice.cpp  arduinoservice.h  arduinoservices.cpp  arduinoservices.h  c.qrc  client.cpp  client.h  connection.cpp  connection.h  crud.pro  employee.cpp  employee.h  gestionclients.cpp  gestionclients.h  gestionclients.ui  historique_service.txt  img.qrc  interface.pro  interface.pro.user.8738966  main.cpp  mainservice.cpp  mainservice.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  reservation.cpp  reservation.h  ressource.qrc  service.cpp  service.h  smtp.cpp  smtp.h  twilio.cpp  (+1 more)
img/: b.qrc  logo.qrc  n.qrc  t.qrc
